work03的開防機制完成
和work04比起來，這是一個比較適合用socket room概念的方式，因為這個介面在加入房間後，真的只需要加入同房的人的消息

但是之前的主介面裡還是要看到所有人!

01.完成開房方式
不輸入任何東西     => 開新房
輸入未存在的房號 => 開新房
輸入已存在的房號 => 加入房間

02.名字可以是相同的，因為是透過更新名單來判斷哪行內容需要刪除

03.返回按鈕等 同於斷線的效果
04.準備按鈕 會在每次被啟用時檢查當前所有準備狀態，如果都是準備好的狀態，會呼叫開始遊戲的按鈕變成可選
05.開始遊戲按鈕  會在執行後開啟畫面

接下來要完成，進遊戲前的倒數
還有製作玩家交換資料的方式

--- a/work03/index.html
+++ b/work03/index.html
@@ -16,13 +16,14 @@
   </div>
   <div class="UI">
     <div class="OpenHouse hidden">
-      <h2>房號 #<span id="PutroomID">000000</span></h2>
-      <ul>
-        <li><span>名字</span><span>狀態</span></li>
+      <h2>房號-<span id="PutroomID">000000</span></h2>
+      <ul id="userList">
+        <li><span id="PutUserName">名字</span><span id="PutUserStatus">狀態</span></li>
       </ul>
       <div class="btns">
-        <button class="return">↺ RERURN ↺</button>
-        <button class="startGame">✦ START ✦</button>
+        <button class="returnLogin">↺ RERURN ↺</button>
+        <button class="readyGame hidden">✦ READY ✦</button>
+        <button class="startGame hidden" disabled="true">✦ START ✦</button>
       </div>
     </div>
     <div class="Login">
@@ -36,12 +37,19 @@
           <div class="textbox">
             <h4>✦ 輸入房號</h4>
             <p>( 不輸的話就是開新房 )</p>
-            <p>( 輸入同樣的就是加入該房間 )</p>
+            <p>( 輸入未存在的房號 => 開新房 )</p>
+            <p>( 輸入已存在的房號 => 加入房間 )</p>
             <input id="roomID" type="text">
           </div>
           <button class="joinGame">✦ 加入遊戲 ✦</button>
         </section>
       </div>
+    </div>
+  </div>
+  <div class="dialog hidden">
+    <div class="dialogBox">
+      <p id="remindText">fewfwefgqerfq</p>
+      <button class="btn close">X</button>
     </div>
   </div>
   <script type="module" src="./main.js"></script>
